2025-05-01T00:58:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14767405928 # 630
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-01
* notice: last 14d: unq all: 4 14
* notice: prev accum: outdated-unq outdated-all / unq all: 814 1292 / 828 1306
* notice: next accum: outdated-unq outdated-all / unq all: 815 1293 / 829 1307
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-17] / [2025-04-30]

2025-04-30T00:53:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14744323214 # 629
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-30
* notice: last 14d: unq all: 4 14
* notice: prev accum: outdated-unq outdated-all / unq all: 814 1292 / 827 1305
* notice: next accum: outdated-unq outdated-all / unq all: 814 1292 / 828 1306
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-04-29]

2025-04-29T00:52:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14720942946 # 628
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-29
* notice: last 14d: unq all: 4 13
* notice: prev accum: outdated-unq outdated-all / unq all: 813 1291 / 826 1304
* notice: next accum: outdated-unq outdated-all / unq all: 814 1292 / 827 1305
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-15] / [2025-04-28]

2025-04-28T00:54:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14697962893 # 627