@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-05-01T00:58:26Z",
+  "timestamp" : "2025-05-02T00:53:13Z",
   "count_outdated" : 1293,
   "uniques_outdated" : 815,
-  "count" : 1307,
-  "uniques" : 829,
+  "count" : 1308,
+  "uniques" : 830,
   "clones" : [
     {
       "timestamp": "2025-04-19T00:00:00Z",
@@ -106,6 +106,15 @@
     },
     {
       "timestamp": "2025-04-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-05-01T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
