@@ -1,5 +1,5 @@
 {
-  "count": 14,
+  "count": 15,
   "uniques": 4,
   "clones": [
     {
@@ -59,6 +59,11 @@
     },
     {
       "timestamp": "2025-04-30T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-05-01T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
